# GDStarter-depricated

./: README.md  pyproject.toml  requirements.txt  setup.py
gdstarter/: main.py
